--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp public/_redirects dist/_redirects",
     "preview": "vite preview"
   }
+
 }
+
