--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "cpx": "^1.2.1",
     "vite": "^7.1.4"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp public/_redirects dist/_redirects",
+    "build": "vite build && npx cpx public/_redirects dist/",
     "preview": "vite preview"
   }
-
 }
-
