--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npx cpx public/_redirects dist/",
+    "build": "vite build",
     "preview": "vite preview"
   }
+
 }
+
